# ros-ground-filter

./: CMakeLists.txt  README.md
nodes/ground_filter/: groundplanfit.cpp
nodes/roof_filter/: roofplanfit.cpp
